--- a/package.json
+++ b/package.json
@@ -12,59 +12,59 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@giscus/react": "^2.2.4",
-    "@mailchimp/mailchimp_marketing": "^3.0.58",
-    "@tailwindcss/typography": "^0.5.0",
-    "@vercel/analytics": "^0.1.5",
+    "@giscus/react": "^2.3.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.21",
     "autoprefixer": "10.4.5",
-    "esbuild": "^0.13.13",
-    "github-slugger": "^1.3.0",
-    "gray-matter": "^4.0.2",
+    "esbuild": "^0.13.15",
+    "github-slugger": "^1.5.0",
+    "gray-matter": "^4.0.3",
     "image-size": "1.0.0",
-    "mdx-bundler": "^8.0.0",
-    "motion": "^10.10.0",
-    "next": "12.3",
-    "next-seo": "^5.14.1",
+    "mdx-bundler": "^8.1.0",
+    "motion": "^10.16.2",
+    "next": "~12.3.4",
+    "next-seo": "^5.15.0",
     "next-themes": "^0.0.14",
-    "postcss": "^8.4.5",
-    "preact": "^10.6.2",
+    "postcss": "^8.4.27",
+    "preact": "^10.16.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
-    "rehype-autolink-headings": "^6.1.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-citation": "^0.1.2",
-    "rehype-katex": "^6.0.2",
-    "rehype-prism-plus": "^1.1.3",
-    "rehype-slug": "^5.0.0",
+    "rehype-katex": "^6.0.3",
+    "rehype-prism-plus": "^1.6.1",
+    "rehype-slug": "^5.1.0",
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "sharp": "^0.30.5",
+    "sharp": "^0.30.7",
     "smoothscroll-polyfill": "^0.4.4",
     "swr": "^1.3.0",
-    "tailwindcss": "^3.0.2",
-    "unist-util-visit": "^4.0.0"
+    "tailwindcss": "^3.3.3",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.7",
-    "@svgr/webpack": "^6.1.2",
+    "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.4.1",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "file-loader": "^6.0.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "file-loader": "^6.2.0",
     "globby": "11.0.3",
     "husky": "^6.0.0",
-    "inquirer": "^8.1.1",
+    "inquirer": "^8.2.6",
     "lint-staged": "^11.2.6",
     "next-remote-watch": "^1.0.0",
     "prettier": "2.2.1",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
